--- a/package.json
+++ b/package.json
@@ -11,5 +11,8 @@
   "devDependencies": {
     "@faker-js/faker": "^6.3.1",
     "cypress-xpath": "^1.6.2"
+  },
+  "dependencies": {
+    "mockaroo": "^0.1.7"
   }
 }
